--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
