--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "weather-app",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"node server.js\"",
+    "start": "concurrently \"next start\" \"node server.js\"",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@babel/runtime": "^7.26.9",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "http-proxy-middleware": "^3.0.3",
+    "morgan": "^1.10.0",
     "next": "^15.1.7",
     "next-seo": "^6.6.0",
     "react": "^19.0.0",
@@ -23,10 +29,13 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.4",
+    "concurrently": "^9.1.2",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.0"
-  }
+  },
+  "repository": "https://github.com/sarah04470/weather-app.git",
+  "author": "seonha hwang <sarah04470@naver.com>"
 }
